name:                spawn
version:             0.2
license:             BSD3
license-file:        LICENSE
synopsis:            Tiny library for concurrent computations
category:            Concurrency, Concurrent, Control
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.6
description:
  Spawn a concurrent 'IO' computation and later demand its result.  Tiny API
  and implementation.

extra-source-files:
  README

library
  exposed-modules:   Control.Concurrent.Spawn
  ghc-options:       -Wall
  build-depends:
      base >= 3 && < 5

source-repository head
    type:     git
    location: git://github.com/kmcallister/spawn.git
